--- a/DEsapp.html
+++ b/DEsapp.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <div class="header">
-            <div class="logo">
+            <div class="DES-logo">
                 <img src="" alt="" class="logo">    
             </div>
             <div class="nav">
